Implement Header + First pages

--- a/client/src/app/components/header/header.component.html
+++ b/client/src/app/components/header/header.component.html
@@ -1,4 +1,4 @@
-<header class="py-3 mb-3 border-bottom">
+<header class="py-3 mb-3 border-bottom bg-light">
   <div
     class="container-fluid d-grid gap-3 align-items-center"
     style="grid-template-columns: 1fr 2fr"
@@ -11,34 +11,45 @@
         data-bs-toggle="dropdown"
         aria-expanded="false"
       >
-        <svg class="bi me-2" width="40" height="32">
-          <use xlink:href="#bootstrap"></use>
-        </svg>
+        <img
+          class="bi me-2"
+          width="38"
+          height="32"
+          src="/images/logo-own.png"
+          alt=""
+        />
       </a>
       <ul
         class="dropdown-menu text-small shadow"
         aria-labelledby="dropdownNavLink"
-        style=""
       >
         <li>
-          <a class="dropdown-item active" href="#" aria-current="page"
-            >Overview</a
+          <a class="dropdown-item" [routerLink]="['/']" aria-current="page"
+            >Übersicht</a
           >
         </li>
-        <li><a class="dropdown-item" href="#">Inventory</a></li>
-        <li><a class="dropdown-item" href="#">Customers</a></li>
-        <li><a class="dropdown-item" href="#">Products</a></li>
+        <li>
+          <a class="dropdown-item" [routerLink]="['/training']"
+            >Trainingspläne</a
+          >
+        </li>
+        <li>
+          <a class="dropdown-item" [routerLink]="['/volume']">Volumenrechner</a>
+        </li>
         <li><hr class="dropdown-divider" /></li>
-        <li><a class="dropdown-item" href="#">Reports</a></li>
-        <li><a class="dropdown-item" href="#">Analytics</a></li>
+        <li>
+          <a class="dropdown-item" [routerLink]="['/statistics']"
+            >Statistiken</a
+          >
+        </li>
       </ul>
     </div>
 
     <div class="d-flex align-items-center">
       <form class="w-100 me-3">
         <input
+          class="bg-light form-control"
           type="search"
-          class="form-control"
           placeholder="Search..."
           aria-label="Search"
         />
@@ -53,7 +64,7 @@
           aria-expanded="false"
         >
           <img
-            src="https://github.com/mdo.png"
+            src="/images/profile-placeholder.webp"
             alt="mdo"
             width="32"
             height="32"
@@ -64,8 +75,6 @@
           class="dropdown-menu text-small shadow"
           aria-labelledby="dropdownUser2"
         >
-          <li><a class="dropdown-item" href="#">New project...</a></li>
-          <li><a class="dropdown-item" href="#">Settings</a></li>
           <li><a class="dropdown-item" href="#">Profile</a></li>
           <li><hr class="dropdown-divider" /></li>
           <li><a class="dropdown-item" href="#">Sign out</a></li>
