Implement blur effect for modal

--- a/client/src/app/components/modal/modal.component.html
+++ b/client/src/app/components/modal/modal.component.html
@@ -1,5 +1,5 @@
 <div class="modal fade show" style="display: block" tabindex="-1" role="dialog">
-  <div class="modal-dialog" role="document">
+  <div class="modal-dialog modal-dialog-centered" role="document">
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title">{{ title }}</h5>
@@ -12,6 +12,11 @@
       </div>
       <div class="modal-body">
         <ng-template #modalContent></ng-template>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-primary">
+          {{ confirmButtonText }}
+        </button>
       </div>
     </div>
   </div>
