--- a/client/src/app/Pages/landing/landing.component.html
+++ b/client/src/app/Pages/landing/landing.component.html
@@ -1,8 +1,8 @@
-<div class="container">
-  <div class="row">
-    <div class="col-lg-6">
-      <!-- Carousel -->
-      <div id="carouselExampleCaptions" class="carousel slide">
+<div class="container-fluid" id="landing-container">
+  <div class="d-grid landing-grid">
+    <!-- Carousel Section -->
+    <div class="carousel-section">
+      <div id="carouselExampleCaptions" class="carousel slide h-100">
         <div class="carousel-indicators">
           <button
             type="button"
@@ -25,12 +25,12 @@
             aria-label="Slide 3"
           ></button>
         </div>
-        <div class="carousel-inner">
-          <div class="carousel-item active">
+        <div class="carousel-inner h-100">
+          <div class="carousel-item active h-100">
             <img
-              src="/images/carousel/index-pascalsu.webp"
-              class="d-block w-100"
-              alt="..."
+              src="/images/carousel/evo-gym-2.webp"
+              class="d-block w-100 h-100"
+              alt="First slide"
             />
             <div class="carousel-caption d-none d-md-block">
               <h5>First slide label</h5>
@@ -39,11 +39,11 @@
               </p>
             </div>
           </div>
-          <div class="carousel-item">
+          <div class="carousel-item h-100">
             <img
-              src="/images/carousel/index-charts.jpg"
-              class="d-block w-100"
-              alt="..."
+              src="/images/carousel/evo-gym.webp"
+              class="d-block w-100 h-100"
+              alt="Second slide"
             />
             <div class="carousel-caption d-none d-md-block">
               <h5>Second slide label</h5>
@@ -52,8 +52,12 @@
               </p>
             </div>
           </div>
-          <div class="carousel-item">
-            <img src="..." class="d-block w-100" alt="..." />
+          <div class="carousel-item h-100">
+            <img
+              src="/images/carousel/evo-gym-2.webp"
+              class="d-block w-100 h-100"
+              alt="Third slide"
+            />
             <div class="carousel-caption d-none d-md-block">
               <h5>Third slide label</h5>
               <p>
@@ -82,9 +86,9 @@
         </button>
       </div>
     </div>
-    <div class="col-lg-6">
-      <!-- Hero Section -->
-      <section class="bg-light p-5 w-100">
+    <!-- Hero Section -->
+    <div class="hero-section bg-light d-flex align-items-center">
+      <section class="p-5 w-100">
         <div class="container">
           <div class="row">
             <div class="col-lg-12">
@@ -102,6 +106,13 @@
                 provides a platform to inspire, support, and learn from each
                 other's successes.
               </p>
+              <p class="lead">
+                Our advanced tracking system ensures you never miss a workout,
+                offering tailored plans and progress reports. Engage with a
+                community of like-minded lifters, join challenges, and find
+                inspiration from others’ journeys. With Training Systems, every
+                lift counts!
+              </p>
               <p>
                 <a
                   href="<%= isAuthenticated ? '/training' : '/register' %>"
@@ -109,15 +120,6 @@
                   >Get Started</a
                 ><a href="#" class="btn btn-outline">Explore Features</a>
               </p>
-            </div>
-            <div
-              class="col-lg-12 d-flex justify-content-center align-items-center"
-            >
-              <img
-                src="images/index-pascalsu.webp"
-                alt="landing image"
-                class="img-fluid d-none d-lg-block"
-              />
             </div>
           </div>
         </div>
