--- a/client/src/app/Pages/landing/landing.component.html
+++ b/client/src/app/Pages/landing/landing.component.html
@@ -2,89 +2,7 @@
   <div class="d-grid landing-grid">
     <!-- Carousel Section -->
     <div class="carousel-section">
-      <div id="carouselExampleCaptions" class="carousel slide h-100">
-        <div class="carousel-indicators">
-          <button
-            type="button"
-            data-bs-target="#carouselExampleCaptions"
-            data-bs-slide-to="0"
-            class="active"
-            aria-current="true"
-            aria-label="Slide 1"
-          ></button>
-          <button
-            type="button"
-            data-bs-target="#carouselExampleCaptions"
-            data-bs-slide-to="1"
-            aria-label="Slide 2"
-          ></button>
-          <button
-            type="button"
-            data-bs-target="#carouselExampleCaptions"
-            data-bs-slide-to="2"
-            aria-label="Slide 3"
-          ></button>
-        </div>
-        <div class="carousel-inner h-100">
-          <div class="carousel-item active h-100">
-            <img
-              src="/images/carousel/evo-gym-2.webp"
-              class="d-block w-100 h-100"
-              alt="First slide"
-            />
-            <div class="carousel-caption d-none d-md-block">
-              <h5>First slide label</h5>
-              <p>
-                Some representative placeholder content for the first slide.
-              </p>
-            </div>
-          </div>
-          <div class="carousel-item h-100">
-            <img
-              src="/images/carousel/evo-gym.webp"
-              class="d-block w-100 h-100"
-              alt="Second slide"
-            />
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Second slide label</h5>
-              <p>
-                Some representative placeholder content for the second slide.
-              </p>
-            </div>
-          </div>
-          <div class="carousel-item h-100">
-            <img
-              src="/images/carousel/evo-gym-2.webp"
-              class="d-block w-100 h-100"
-              alt="Third slide"
-            />
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Third slide label</h5>
-              <p>
-                Some representative placeholder content for the third slide.
-              </p>
-            </div>
-          </div>
-        </div>
-        <button
-          class="carousel-control-prev"
-          type="button"
-          data-bs-target="#carouselExampleCaptions"
-          data-bs-slide="prev"
-        >
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button
-          class="carousel-control-next"
-          type="button"
-          data-bs-target="#carouselExampleCaptions"
-          data-bs-slide="next"
-        >
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
-      </div>
+      <app-carousel [slides]="carouselSlides"></app-carousel>
     </div>
     <!-- Hero Section -->
     <div class="hero-section bg-light d-flex align-items-center">
