--- a/client/src/app/Pages/landing/landing.component.html
+++ b/client/src/app/Pages/landing/landing.component.html
@@ -5,43 +5,13 @@
       <app-carousel [slides]="carouselSlides"></app-carousel>
     </div>
     <!-- Hero Section -->
-    <div class="hero-section bg-light d-flex align-items-center">
-      <section class="p-5 w-100">
-        <div class="container">
-          <div class="row">
-            <div class="col-lg-12">
-              <h1 class="pb-3">Training Systems</h1>
-              <p class="lead">
-                Track Your Powerlifting Progress and Connect with the Community!
-              </p>
-              <p class="lead">
-                Join Training Systems to record your powerlifting journey, set
-                personal records, and share your achievements with fellow
-                lifters.
-              </p>
-              <p class="lead">
-                Whether you're a beginner or an experienced lifter, our app
-                provides a platform to inspire, support, and learn from each
-                other's successes.
-              </p>
-              <p class="lead">
-                Our advanced tracking system ensures you never miss a workout,
-                offering tailored plans and progress reports. Engage with a
-                community of like-minded lifters, join challenges, and find
-                inspiration from others’ journeys. With Training Systems, every
-                lift counts!
-              </p>
-              <p>
-                <a
-                  href="<%= isAuthenticated ? '/training' : '/register' %>"
-                  class="btn btn-dark shadow mr-2"
-                  >Get Started</a
-                ><a href="#" class="btn btn-outline">Explore Features</a>
-              </p>
-            </div>
-          </div>
-        </div>
-      </section>
+    <div class="hero-section">
+      <app-hero
+        [headline]="heroHeadline"
+        [leadTexts]="heroLeadTexts"
+        [buttonText]="heroButtonText"
+      >
+      </app-hero>
     </div>
   </div>
 </div>
