--- a/client/src/app/components/header/header.component.html
+++ b/client/src/app/components/header/header.component.html
@@ -96,9 +96,19 @@
         >
           <li><a class="dropdown-item" href="#">Profile</a></li>
           <li><hr class="dropdown-divider" /></li>
+          @if (isAuthenticated) {
           <li>
-            <a class="dropdown-item" href="#">Sign out</a>
+            <a class="dropdown-item" href="#" (click)="handleLogout($event)"
+              >Sign out</a
+            >
           </li>
+          } @else {
+          <li>
+            <a class="dropdown-item" href="#" (click)="handleLogin($event)"
+              >Sign in</a
+            >
+          </li>
+          }
         </ul>
       </div>
     </div>
