--- a/client/src/app/hero/hero.component.html
+++ b/client/src/app/hero/hero.component.html
@@ -3,9 +3,9 @@
     <div class="row">
       <div class="col-lg-12">
         <h1 class="pb-3">{{ headline }}</h1>
-        <ng-container *ngFor="let text of leadTexts">
-          <p class="lead">{{ text }}</p>
-        </ng-container>
+        @for (text of leadTexts; track text) {
+        <p class="lead">{{ text }}</p>
+        }
         <p>
           <a class="btn btn-dark shadow mr-2 mt-3">{{ buttonText }}</a>
         </p>
