--- a/client/src/app/Pages/login/login.component.html
+++ b/client/src/app/Pages/login/login.component.html
@@ -1,20 +1,40 @@
-<form class="p-3">
-  <div class="form-floating mb-3">
-    <input
-      type="email"
-      class="form-control"
-      id="floatingInput"
-      placeholder="name@example.com"
-    />
-    <label for="floatingInput">Email address</label>
+<section class="container forms">
+  <div class="form login">
+    <div class="form-content">
+      <header>Login</header>
+      <form action="#">
+        <div class="field input-field">
+          <input type="email" placeholder="Email" class="input" />
+        </div>
+        <div class="field input-field">
+          <input type="password" placeholder="Password" class="password" />
+          <i class="bx bx-hide eye-icon"></i>
+        </div>
+        <div class="form-link">
+          <a href="#" class="forgot-pass">Forgot password?</a>
+        </div>
+        <div class="field button-field">
+          <button>Login</button>
+        </div>
+      </form>
+      <div class="form-link">
+        <span
+          >Don't have an account?
+          <a
+            href="/register"
+            class="link signup-link"
+            (click)="navigateTo($event)"
+            >Signup</a
+          ></span
+        >
+      </div>
+    </div>
+    <div class="line"></div>
+    <div class="media-options">
+      <a href="#" class="field google">
+        <img src="/images/google.png" alt="" class="google-img" />
+        <span>Login with Google</span>
+      </a>
+    </div>
   </div>
-  <div class="form-floating mb-3">
-    <input
-      type="password"
-      class="form-control"
-      id="floatingPassword"
-      placeholder="Password"
-    />
-    <label for="floatingPassword">Password</label>
-  </div>
-</form>
+</section>
