--- a/client/src/app/Pages/login/login.component.scss
+++ b/client/src/app/Pages/login/login.component.scss
@@ -4,13 +4,14 @@
   font-family: "Poppins", sans-serif;
 }
 .container {
-  height: 100vh;
+  height: calc(100vh - 10rem);
   width: 100vw;
   display: flex;
   align-items: center;
   justify-content: center;
-
   column-gap: 30px;
+  position: relative;
+  top: -200px;
 }
 .form {
   position: absolute;
