--- a/client/src/app/register/register.component.scss
+++ b/client/src/app/register/register.component.scss
@@ -4,13 +4,14 @@
   font-family: "Poppins", sans-serif;
 }
 .container {
-  height: 100vh;
+  height: calc(100vh - 10rem);
   width: 100vw;
   display: flex;
   align-items: center;
   justify-content: center;
-
   column-gap: 30px;
+  position: relative;
+  top: -200px;
 }
 .form {
   position: absolute;
@@ -20,14 +21,6 @@
   border-radius: 6px;
   background: #fff;
   border: 1px solid rgb(226, 226, 226);
-}
-.forms.show-signup .form.signup {
-  opacity: 1;
-  pointer-events: auto;
-}
-.forms.show-signup .form.login {
-  opacity: 0;
-  pointer-events: none;
 }
 header {
   font-size: 28px;
