--- a/client/src/app/register/register.component.html
+++ b/client/src/app/register/register.component.html
@@ -5,15 +5,21 @@
       <header>Signup</header>
       <form action="#">
         <div class="field input-field">
-          <input type="text" placeholder="Username" class="input" />
+          <input
+            type="text"
+            placeholder="Username"
+            name="username"
+            class="input"
+          />
         </div>
         <div class="field input-field">
-          <input type="email" placeholder="Email" class="input" />
+          <input type="email" placeholder="Email" name="email" class="input" />
         </div>
         <div class="field input-field">
           <input
             type="password"
             placeholder="Create password"
+            name="password"
             class="password"
           />
           <i
@@ -25,6 +31,7 @@
           <input
             type="password"
             placeholder="Confirm password"
+            name="confirmPassword"
             class="password"
           />
           <i
