--- a/client/src/app/Pages/login/login.component.html
+++ b/client/src/app/Pages/login/login.component.html
@@ -4,10 +4,15 @@
       <header>Login</header>
       <form action="#">
         <div class="field input-field">
-          <input type="email" placeholder="Email" class="input" />
+          <input type="email" placeholder="Email" class="input" name="email" />
         </div>
         <div class="field input-field">
-          <input type="password" placeholder="Password" class="password" />
+          <input
+            type="password"
+            placeholder="Password"
+            class="password"
+            name="password"
+          />
           <i
             class="bx bx-hide eye-icon"
             (click)="togglePasswordVisibility($event)"
