--- a/client/src/app/Pages/login/login.component.scss
+++ b/client/src/app/Pages/login/login.component.scss
@@ -4,14 +4,12 @@
   font-family: "Poppins", sans-serif;
 }
 .container {
-  height: calc(100vh - 10rem);
+  height: calc(100vh - 200px);
   width: 100vw;
   display: flex;
   align-items: center;
   justify-content: center;
   column-gap: 30px;
-  position: relative;
-  top: -200px;
 }
 .form {
   position: absolute;
@@ -21,6 +19,8 @@
   border-radius: 6px;
   background: #fff;
   border: 1px solid rgb(226, 226, 226);
+  position: relative;
+  top: -200px;
 }
 .form.signup {
   opacity: 0;
