--- a/client/src/app/register/register.component.html
+++ b/client/src/app/register/register.component.html
@@ -3,7 +3,7 @@
   <div class="form signup">
     <div class="form-content">
       <header>Signup</header>
-      <form action="#">
+      <form (submit)="onSubmit($event)">
         <div class="field input-field">
           <input
             type="text"
