--- a/client/src/app/Pages/login/login.component.html
+++ b/client/src/app/Pages/login/login.component.html
@@ -45,4 +45,22 @@
       </a>
     </div>
   </div>
+  <div
+    id="g_id_onload"
+    data-client_id="643508334542-dlp04afd8ha9mt3v7pfc5mfkmqea3rqj.apps.googleusercontent.com"
+    data-context="signin"
+    data-ux_mode="popup"
+    data-login_uri="http://localhost:3000/api/login"
+    data-auto_prompt="false"
+  ></div>
+
+  <div
+    class="g_id_signin"
+    data-type="standard"
+    data-shape="rectangular"
+    data-theme="outline"
+    data-text="signin_with"
+    data-size="large"
+    data-logo_alignment="left"
+  ></div>
 </section>
