Fix timing issues while logging in

--- a/client/src/app/Pages/login/login.component.html
+++ b/client/src/app/Pages/login/login.component.html
@@ -57,10 +57,15 @@
         data-size="large"
         data-logo_alignment="left"
       ></div>
-      <a href="#" class="field google">
+      <!-- <a
+        href="#"
+        class="field google"
+        id="google-login-link"
+        (click)="onGoogleLogin($event)"
+      >
         <img src="/images/google.png" alt="" class="google-img" />
         <span>Login with Google</span>
-      </a>
+      </a> -->
     </div>
   </div>
 </section>
