Training index page + create Training form in modal

--- a/client/src/app/Pages/training-plans/training-plans.component.html
+++ b/client/src/app/Pages/training-plans/training-plans.component.html
@@ -1,1 +1,76 @@
-<p>training-plans works!</p>
+<!-- + Button with Label -->
+<div class="container mt-4 mb-3">
+  <div class="d-flex justify-content-end align-items-center">
+    <span class="me-2">Neuen Plan erstellen</span>
+    <button type="button" class="btn btn-light" (click)="createNewPlan()">
+      <i class="bx bx-plus"></i>
+    </button>
+  </div>
+</div>
+
+<section id="gallery">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-4 mb-4">
+        <div class="card">
+          <img
+            src="https://images.unsplash.com/photo-1477862096227-3a1bb3b08330?ixlib=rb-1.2.1&auto=format&fit=crop&w=700&q=60"
+            alt=""
+            class="card-img-top"
+          />
+          <div class="card-body">
+            <h5 class="card-title">Sunset</h5>
+            <p class="card-text">
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut eum
+              similique repellat a laborum, rerum voluptates ipsam eos quo
+              tempore iusto dolore modi dolorum in pariatur. Incidunt
+              repellendus praesentium quae!
+            </p>
+            <a href="" class="btn btn-light btn-md m-1">Ansehen</a>
+            <a href="" class="btn btn-light btn-md">Löschen</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-4 mb-4">
+        <div class="card">
+          <img
+            src="https://images.unsplash.com/photo-1516214104703-d870798883c5?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=700&q=60"
+            alt=""
+            class="card-img-top"
+          />
+          <div class="card-body">
+            <h5 class="card-title">Sunset</h5>
+            <p class="card-text">
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut eum
+              similique repellat a laborum, rerum voluptates ipsam eos quo
+              tempore iusto dolore modi dolorum in pariatur. Incidunt
+              repellendus praesentium quae!
+            </p>
+            <a href="" class="btn btn-light btn-md m-1">Ansehen</a>
+            <a href="" class="btn btn-light btn-md">Löschen</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-4 mb-4">
+        <div class="card">
+          <img
+            src="https://images.unsplash.com/photo-1477862096227-3a1bb3b08330?ixlib=rb-1.2.1&auto=format&fit=crop&w=700&q=60"
+            alt=""
+            class="card-img-top"
+          />
+          <div class="card-body">
+            <h5 class="card-title">Sunset</h5>
+            <p class="card-text">
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut eum
+              similique repellat a laborum, rerum voluptates ipsam eos quo
+              tempore iusto dolore modi dolorum in pariatur. Incidunt
+              repellendus praesentium quae!
+            </p>
+            <a href="" class="btn btn-light btn-md m-1">Ansehen</a>
+            <a href="" class="btn btn-light btn-md">Löschen</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
