--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -1,3 +1,9 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap");
+* {
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
+}
+
 body {
   display: flex;
   flex-direction: column;
@@ -9,5 +15,5 @@ header {
 }
 
 .blur-background > *:not(app-modal) {
-  filter: blur(3.5px);
+  filter: blur(2px);
 }
