Implement database schema

--- a/client/src/app/Pages/profile/profile.component.html
+++ b/client/src/app/Pages/profile/profile.component.html
@@ -1,6 +1,3 @@
-@if (isLoading) {
-<app-spinner></app-spinner>
-} @else {
 <div class="container my-5 profile-container">
   <div class="bg-white shadow rounded overflow-hidden">
     <div class="px-4 pt-0 pb-4 cover">
@@ -22,7 +19,7 @@
         </div>
       </div>
     </div>
-    <div class="bg-light p-4 d-flex justify-content-end text-center">
+    <div class="bg-light p-4 mb-2 d-flex justify-content-end text-center">
       <ul class="list-inline mb-0">
         <li class="list-inline-item">
           <h5 class="font-weight-bold mb-0 d-block">215</h5>
@@ -89,5 +86,3 @@
     </div>
   </div>
 </div>
-
-}
