--- a/client/src/app/components/header/header.component.html
+++ b/client/src/app/components/header/header.component.html
@@ -74,10 +74,10 @@
           aria-expanded="false"
         >
           <img
-            src="/images/profile-placeholder.webp"
+            [src]="profile.pictureUrl || '/images/profile-placeholder.webp'"
             alt="mdo"
-            width="32"
-            height="32"
+            width="26"
+            height="26"
             class="rounded-circle"
           />
         </a>
