--- a/client/src/app/Pages/profile/profile.component.html
+++ b/client/src/app/Pages/profile/profile.component.html
@@ -1,3 +1,6 @@
+@if (isLoading) {
+<app-spinner></app-spinner>
+} @else {
 <div class="container my-5 profile-container">
   <div class="bg-white shadow rounded overflow-hidden">
     <div class="px-4 pt-0 pb-4 cover">
@@ -86,3 +89,5 @@
     </div>
   </div>
 </div>
+
+}
