Rework trianing plan component

--- a/client/src/app/Pages/training-plans/training-plans.component.html
+++ b/client/src/app/Pages/training-plans/training-plans.component.html
@@ -11,66 +11,41 @@
 <section id="gallery">
   <div class="container">
     <div class="row">
+      <!-- Alert if no training plans -->
+      @if (trainingPlans.length === 0) {
+      <div class="col-12">
+        <app-alert
+          alertType="light"
+          alertText="Du hast noch keine eigenen Trainingspläne erstellt. Erstelle welche mit dem Button oben!"
+        ></app-alert>
+      </div>
+      } @else { @for (trainingPlan of trainingPlans; track trainingPlan; let i =
+      $index) {
       <div class="col-lg-4 mb-4">
         <div class="card">
           <img
             src="https://images.unsplash.com/photo-1477862096227-3a1bb3b08330?ixlib=rb-1.2.1&auto=format&fit=crop&w=700&q=60"
-            alt=""
+            alt="Training Image"
             class="card-img-top"
           />
           <div class="card-body">
-            <h5 class="card-title">Sunset</h5>
+            <h5 class="card-title mb-3">{{ trainingPlan.title }}</h5>
+            <p class="card-text mb-1">
+              Frequenz:
+              <span class="text-muted"
+                >{{ trainingPlan.trainingFrequency }} Trainings / Woche</span
+              >
+            </p>
             <p class="card-text">
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut eum
-              similique repellat a laborum, rerum voluptates ipsam eos quo
-              tempore iusto dolore modi dolorum in pariatur. Incidunt
-              repellendus praesentium quae!
+              Zuletzt angesehen:
+              <span class="text-muted">{{ trainingPlan.lastUpdated }}</span>
             </p>
             <a href="" class="btn btn-light btn-md m-1">Ansehen</a>
             <a href="" class="btn btn-light btn-md">Löschen</a>
           </div>
         </div>
       </div>
-      <div class="col-lg-4 mb-4">
-        <div class="card">
-          <img
-            src="https://images.unsplash.com/photo-1516214104703-d870798883c5?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=700&q=60"
-            alt=""
-            class="card-img-top"
-          />
-          <div class="card-body">
-            <h5 class="card-title">Sunset</h5>
-            <p class="card-text">
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut eum
-              similique repellat a laborum, rerum voluptates ipsam eos quo
-              tempore iusto dolore modi dolorum in pariatur. Incidunt
-              repellendus praesentium quae!
-            </p>
-            <a href="" class="btn btn-light btn-md m-1">Ansehen</a>
-            <a href="" class="btn btn-light btn-md">Löschen</a>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-4 mb-4">
-        <div class="card">
-          <img
-            src="https://images.unsplash.com/photo-1477862096227-3a1bb3b08330?ixlib=rb-1.2.1&auto=format&fit=crop&w=700&q=60"
-            alt=""
-            class="card-img-top"
-          />
-          <div class="card-body">
-            <h5 class="card-title">Sunset</h5>
-            <p class="card-text">
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut eum
-              similique repellat a laborum, rerum voluptates ipsam eos quo
-              tempore iusto dolore modi dolorum in pariatur. Incidunt
-              repellendus praesentium quae!
-            </p>
-            <a href="" class="btn btn-light btn-md m-1">Ansehen</a>
-            <a href="" class="btn btn-light btn-md">Löschen</a>
-          </div>
-        </div>
-      </div>
+      } }
     </div>
   </div>
 </section>
