Implement create training plan route

--- a/client/src/app/Pages/training-plans/training-plans.component.html
+++ b/client/src/app/Pages/training-plans/training-plans.component.html
@@ -21,6 +21,7 @@
       </div>
       } @else { @for (trainingPlan of trainingPlans; track trainingPlan; let i =
       $index) {
+      <!-- Das hier irgendwann in eine eigene Komponente kriegen ^^ Das ist mit dem layout nur nicht so leicht -->
       <div class="col-lg-4 mb-4">
         <div class="card">
           <img
