Implement event based communication between modal and form displayed in modal

--- a/client/src/app/components/modal/modal.component.html
+++ b/client/src/app/components/modal/modal.component.html
@@ -14,7 +14,7 @@
         <ng-template #modalContent></ng-template>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-primary">
+        <button type="button" class="btn btn-primary" (click)="confirm()">
           {{ confirmButtonText }}
         </button>
       </div>
