--- a/client/src/app/components/header/header.component.html
+++ b/client/src/app/components/header/header.component.html
@@ -74,7 +74,7 @@
           aria-expanded="false"
         >
           <img
-            [src]="profile.pictureUrl || '/images/profile-placeholder.webp'"
+            [src]="profile?.pictureUrl || '/images/profile-placeholder.webp'"
             alt="mdo"
             width="26"
             height="26"
