--- a/client/src/app/create-training-form/create-training-form.component.html
+++ b/client/src/app/create-training-form/create-training-form.component.html
@@ -1,8 +1,7 @@
 <div class="row no-gutters">
   <div class="col-md-12">
     <div class="card-body">
-      <form id="create-training-form">
-        <!-- Platzhalterbild -->
+      <form [formGroup]="trainingForm" (ngSubmit)="onSubmit()">
         <div class="form-group text-center mb-4 position-relative">
           <img
             src="https://via.placeholder.com/150"
@@ -32,52 +31,92 @@
             type="text"
             class="form-control"
             id="training_title"
-            name="title"
+            formControlName="title"
             placeholder="Titel"
             required
           />
           <label for="training_title">Titel</label>
+          <div
+            *ngIf="
+              trainingForm.get('title')?.invalid &&
+              trainingForm.get('title')?.touched
+            "
+            class="text-danger"
+          >
+            Title is required
+          </div>
         </div>
 
         <div class="form-floating mb-4">
           <select
-            name="trainingFrequency"
             id="training_frequency"
             class="form-control"
+            formControlName="trainingFrequency"
             required
           >
-            <option value="" disabled selected hidden></option>
+            <option value="" disabled hidden></option>
             <option value="3">3</option>
             <option value="4" selected>4</option>
             <option value="5">5</option>
             <option value="6">6</option>
           </select>
           <label for="training_frequency">Trainings / Woche</label>
+          <div
+            *ngIf="
+              trainingForm.get('trainingFrequency')?.invalid &&
+              trainingForm.get('trainingFrequency')?.touched
+            "
+            class="text-danger"
+          >
+            Training frequency is required
+          </div>
         </div>
 
         <div class="form-floating mb-4">
           <select
-            name="trainingWeeks"
             id="training_weeks"
             class="form-control"
+            formControlName="trainingWeeks"
             required
           >
-            <option value="" disabled selected hidden></option>
+            <option value="" disabled hidden></option>
             <option value="3">3</option>
             <option value="4" selected>4</option>
             <option value="5">5</option>
             <option value="6">6</option>
           </select>
           <label for="training_weeks">Blocklänge (Wochen)</label>
+          <div
+            *ngIf="
+              trainingForm.get('trainingWeeks')?.invalid &&
+              trainingForm.get('trainingWeeks')?.touched
+            "
+            class="text-danger"
+          >
+            Training weeks are required
+          </div>
         </div>
 
         <div class="form-floating mb-4">
-          <select name="weightPlaceholders" class="form-control" required>
+          <select
+            formControlName="weightPlaceholders"
+            class="form-control"
+            required
+          >
             <option value="max" selected>basierend auf Rechenmax</option>
             <option value="lastWeek">basierend auf letzter Woche</option>
             <option value="off">keine Gewichtsempfehlungen</option>
           </select>
           <label for="weightPlaceholders">Gewichtsempfehlungen</label>
+          <div
+            *ngIf="
+              trainingForm.get('weightPlaceholders')?.invalid &&
+              trainingForm.get('weightPlaceholders')?.touched
+            "
+            class="text-danger"
+          >
+            Weight recommendations are required
+          </div>
         </div>
       </form>
     </div>
