Fix delete implement update

--- a/client/src/app/Pages/training-plans/training-plans.component.html
+++ b/client/src/app/Pages/training-plans/training-plans.component.html
@@ -46,7 +46,7 @@
               class="btn btn-light btn-md m-1"
               (click)="viewTrainingPlan(i)"
               data-bs-toggle="tooltip"
-              data-bs-placement="top"
+              data-placement="top"
               title="Ansehen"
             >
               <i class="bx bx-show"></i>
