Fix edit training plan

--- a/client/src/app/components/header/header.component.html
+++ b/client/src/app/components/header/header.component.html
@@ -41,6 +41,15 @@
             >Trainingspläne</a
           >
         </li>
+        <li>
+          <a
+            href="/exercises"
+            #navLink
+            class="dropdown-item"
+            (click)="navigateTo($event)"
+            >Übungen</a
+          >
+        </li>
         <li><hr class="dropdown-divider" /></li>
         <li>
           <a
