--- a/client/src/app/Pages/training-plans/training-plans.component.html
+++ b/client/src/app/Pages/training-plans/training-plans.component.html
@@ -1,4 +1,4 @@
-@if (trainingPlans) {
+@if (allTrainingPlans) {
 <!-- + Button with Label -->
 <div class="container mt-4 mb-3">
   <div class="d-flex justify-content-end align-items-center">
@@ -13,15 +13,15 @@
   <div class="container">
     <div class="row">
       <!-- Alert if no training plans -->
-      @if (trainingPlans.length === 0) {
+      @if (filteredTrainingPlans.length === 0) {
       <div class="col-12">
         <app-alert
           alertType="light"
           alertText="Du hast noch keine eigenen Trainingspläne erstellt. Erstelle welche mit dem Button oben!"
         ></app-alert>
       </div>
-      } @else { @for (trainingPlan of trainingPlans; track trainingPlan; let i =
-      $index) {
+      } @else { @for (trainingPlan of filteredTrainingPlans; track trainingPlan;
+      let i = $index) {
       <div class="col-lg-4 mb-4">
         <div class="card">
           <img
