--- a/client/src/app/components/header/header.component.html
+++ b/client/src/app/components/header/header.component.html
@@ -70,6 +70,7 @@
           type="search"
           placeholder="Search..."
           aria-label="Search"
+          (input)="onSearchInput($event)"
         />
       </form>
 
