--- a/client/src/app/edit-training-plan/edit-training-plan.component.html
+++ b/client/src/app/edit-training-plan/edit-training-plan.component.html
@@ -1,3 +1,6 @@
+@if (loading) {
+<app-spinner></app-spinner>
+} @else {
 <div class="row no-gutters">
   <div class="col-md-12">
     <div class="card-body">
@@ -122,3 +125,5 @@
     </div>
   </div>
 </div>
+
+}
