--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -24,3 +24,19 @@ body {
   border: none;
   outline: none;
 }
+
+/* Hide up and down arrows from number inputs */
+input[type="number"] {
+  -moz-appearance: textfield; /* Firefox */
+}
+
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0; /* Chrome, Safari, Edge, Opera */
+}
+
+/* Remove up and down arrows in IE10+ */
+input[type="number"] {
+  -ms-appearance: textfield;
+}
