--- a/client/src/app/training-view/training-view.component.html
+++ b/client/src/app/training-view/training-view.component.html
@@ -118,7 +118,7 @@
         </td>
         <td data-cell="@RPE">
           <input
-            type="number"
+            type="string"
             class="transparent-input actualRPE"
             name="day1_exercise{{ k }}_actualRPE"
             [value]="trainingDay.exercises[k - 1]?.actualRPE || ''"
