--- a/client/src/app/training-view/training-view.component.scss
+++ b/client/src/app/training-view/training-view.component.scss
@@ -28,6 +28,10 @@
   min-width: 140px;
 }
 
+.actualRPE {
+  text-align: center;
+}
+
 @media (max-width: 768px) {
   .responsive-table td {
     display: grid;
