--- a/client/src/app/training-view/training-view.component.scss
+++ b/client/src/app/training-view/training-view.component.scss
@@ -77,14 +77,8 @@
   .training-table tr td input[type="number"] {
     text-align: left;
   }
-}
 
-/* Make the first two rows larger */
-.training-table tr:nth-of-type(1),
-.training-table tr:nth-of-type(2) {
-  height: 50px;
-}
-
-.notes-textarea {
-  margin-bottom: 20px;
+  .actualRPE {
+    text-align: left;
+  }
 }
