Implement table stripes

--- a/client/src/app/training-view/training-view.component.html
+++ b/client/src/app/training-view/training-view.component.html
@@ -14,7 +14,7 @@
 
 <form (submit)="onSubmit($event)">
   <table
-    class="table table-hover training-table responsive-table caption-top mb-4"
+    class="table table-striped training-table responsive-table caption-top mb-4"
   >
     <thead>
       <tr>
