--- a/client/src/app/training-view/training-view.component.html
+++ b/client/src/app/training-view/training-view.component.html
@@ -6,7 +6,7 @@
     <div class="col text-left">
       <h3 class="display-4 title">{{ title }}</h3>
       <p class="lead week-day-info">
-        Week {{ trainingWeekIndex + 1 }} - Day {{ trainingDayIndex + 1 }}
+        Week {{ trainingWeekIndex }} - Day {{ trainingDayIndex }}
       </p>
     </div>
   </div>
@@ -33,7 +33,7 @@
       <tr>
         <td data-cell="Category">
           <select
-            name="day1_exercise{{ k }}_category"
+            name="day{{ day }}_exercise{{ k }}_category"
             class="exercise-category-selector transparent-input w-100"
             (change)="onCategoryChange($event)"
             [ngStyle]="{
@@ -58,7 +58,7 @@
         <td data-cell="Exercise">
           @for (category of exerciseCategories; track category) {
           <select
-            name="day1_exercise{{ k }}_exercise_name"
+            name="day{{ day }}_exercise{{ k }}_exercise_name"
             class="exercise-name-selector transparent-input"
             [disabled]="trainingDay.exercises[k - 1]?.category !== category"
             [style.display]="
@@ -86,7 +86,7 @@
           <input
             type="number"
             class="transparent-input sets"
-            name="day1_exercise{{ k }}_sets"
+            name="day{{ day }}_exercise{{ k }}_sets"
             [value]="trainingDay.exercises[k - 1]?.sets || ''"
             (input)="onInputChange($event)"
           />
@@ -95,7 +95,7 @@
           <input
             type="number"
             class="transparent-input reps"
-            name="day1_exercise{{ k }}_reps"
+            name="day{{ day }}_exercise{{ k }}_reps"
             [value]="trainingDay.exercises[k - 1]?.reps || ''"
             (input)="onInputChange($event)"
           />
@@ -104,7 +104,7 @@
           <input
             type="number"
             class="transparent-input weight"
-            name="day1_exercise{{ k }}_weight"
+            name="day{{ day }}_exercise{{ k }}_weight"
             [value]="trainingDay.exercises[k - 1]?.weight || ''"
             (input)="onInputChange($event)"
           />
@@ -113,7 +113,7 @@
           <input
             type="number"
             class="transparent-input targetRPE"
-            name="day1_exercise{{ k }}_targetRPE"
+            name="day{{ day }}_exercise{{ k }}_targetRPE"
             [value]="trainingDay.exercises[k - 1]?.targetRPE || ''"
             (input)="onInputChange($event)"
           />
@@ -122,7 +122,7 @@
           <input
             type="string"
             class="transparent-input actualRPE"
-            name="day1_exercise{{ k }}_actualRPE"
+            name="day{{ day }}_exercise{{ k }}_actualRPE"
             [value]="trainingDay.exercises[k - 1]?.actualRPE || ''"
             (input)="onInputChange($event)"
           />
@@ -132,7 +132,7 @@
             type="number"
             class="transparent-input estMax"
             readonly
-            name="day1_exercise{{ k }}_estMax"
+            name="day{{ day }}_exercise{{ k }}_estMax"
             [value]="trainingDay.exercises[k - 1]?.estMax || ''"
             (input)="onInputChange($event)"
           />
